# desafio-pin-people

./: README.md  docker-compose.yaml  main.py  pyproject.toml
api/: dockerfile  main.py  requirements.txt
api/application/services/: funcionario_service.py
api/core/: database.py
api/domain/entities/: funcionario_entitie.py
api/domain/interfaces/: Ifuncionario.py
api/domain/values_objects/: analise.py  paginator.py
api/infrastructure/models/: funcionarioModel.py
api/infrastructure/repositories/: funcionarioRepository.py
api/interface/routes/: funcionario_router.py
api/tests/: conftest.py
api/tests/factories/: funcionario_factory.py
api/tests/unit/: test_funcionario_repository.py
dashboard/: dash.py  dockerfile
script_db/: Import.py  data.csv
worker_3/: worker.py
worker_3/core/: database.py
worker_3/models/: model.py
