[project]
name = "desafio-pin-people"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "fastmcp>=2.13.3",
    "leia>=0.1.0",
    "leia-br>=0.0.1",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
    "vadersentiment>=3.3.2",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["api/tests"]